Adding Atom format and improving XML tests